--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 
 title: Nathan M Smale
-email: nathan@nathansmal.com
+email: nathan@nathansmale.com
 description: A Personal Website
 baseurl:
 
